--- a/projects/bouncing-box/index.html
+++ b/projects/bouncing-box/index.html
@@ -14,7 +14,7 @@
 			display: block;
 			position: absolute;
 			top: 100px;
-			left: 200px;  /* <--- Change me! */
+			left: 400px;  /* <--- Change me! */
 		}
 	</style>
 	<!-- 	<script src="//cdnjs.cloudflare.com/ajax/libs/jquery/2.1.1/jquery.min.js"></script> -->
@@ -58,7 +58,11 @@
 			//////////////////////////////////////////////////////////////////
 			
 			// TODO 2 - Variable declarations 
+			var positionX = 0;
+			var points = 0
+			var speed = 10;
 			
+
 
 			
 			/* 
@@ -66,10 +70,18 @@
 			it should move the Box to a new location. If the box drifts off the screen
 			turn it around! 
 			*/
-			function update() {
-				
+				function update() {
+                positionX = positionX + speed;
+                moveBoxTo(positionX);
+                if (positionX > boardWidth) {
+				       speed = -speed;
 
-			};
+                }
+                if (positionX < 0) {
+                    speed = -speed;
+                }
+            }
+
 
 			/* 
 			This Function will be called each time the box is clicked. Each time it is called,
@@ -77,8 +89,16 @@
 			the left side of the screen.
 			*/
 			function handleBoxClick() {
-				
-
+				positionX = 0;
+				   points = points + 1;
+            changeBoxText(points);
+            speed = speed + 3;
+            if (speed > 0) {
+                    speed = speed + 3
+                }
+                else if (speed < 0) {
+                    speed = speed - 3
+                }
 
 			};
 		})();
